Fix for bug where long topics overflow the tag span

--- a/javascript/src/client/global.scss
+++ b/javascript/src/client/global.scss
@@ -92,6 +92,7 @@ select {
 
 .Label {
   margin-right: 0.5rem;
+  white-space: normal;
 }
 
 .loader {
